--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "api": {
+      "hotReloadEnabled": false,
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
