Implemented user authentication

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=socialapp.db"
-  }
+  },
+  "TokenKey": "kl4G06aYpQ)ybiQJ-$#D)6X3qqy1s2B1SX};OsFUQc{UNYI5f_d}/qT,nvvhkzs1Zo8WHXoCOuTTEY0zymHuooNMjOkKO7I" 
 }
